--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     database: 0
     host: 127.0.0.1
     pool: 6379
-    password: andy
+    password: Andy
     jedis:
       pool:
         min-idle: 0
